--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ pydantic>=2.5.0
 pydantic-settings>=2.0.0
 python-dotenv>=1.0.0
 openai>=1.35.0
+anthropic>=0.25.0
 websockets>=12.0
 python-docx>=1.1.0
 aiofiles>=24.1.0
