updated .env and readme and ready for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# OpenAI Configuration
-OPENAI_API_KEY=sk-...                         # Your OpenAI API key (required)
+# AI Model Configuration
+ANTHROPIC_API_KEY=sk-ant-...                  # Your Anthropic Claude API key (required)
 
 # Redis Configuration  
 REDIS_URL=redis://localhost:6379              # Redis connection string
